--- a/index.html
+++ b/index.html
@@ -1,15 +1,65 @@
 <!DOCTYPE html>
 <html ng-app="app" ng-csp="">
 <head>
-  <meta charset="UTF-8">
-  <title>Fibonacci Lamp</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Evil Genius Labs : Custom LED Lighting Creations">
+  <meta name="author" content="">
+
+  <title>Fibonacci</title>
+
+  <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <!-- Bootstrap theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+
+  <!-- Custom styles -->
   <link rel="stylesheet" href="css/styles.css">
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+  <!-- Favicons -->
+  <!-- For IE 9 and below. ICO should be 32x32 pixels in size -->
+  <!--[if IE]><link rel="shortcut icon" href="images/atom32.ico"><![endif]-->
+  <!-- Firefox, Chrome, Safari, IE 11+ and Opera. 196x196 pixels in size. -->
+  <link rel="icon" href="images/atom196.png">
 </head>
 <body ng-controller="MainCtrl">
+  <!-- master nav -->
+  <header class="navbar navbar-default navbar-static-top" id="top" role="banner">
+    <div class="container">
+      <div class="navbar-header">
+        <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Evil Genius Labs</a>
+      </div>
+      <nav class="collapse navbar-collapse bs-navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li class="active">
+            <a href="https://github.com/evilgeniuslabs/fibonacci"><img style="height: 16px;" src="https://assets-cdn.github.com/favicon.ico" /> Fibonacci</a>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a href="https://twitter.com/evilgeniuslab"><img style="height: 16px;" src="https://abs.twimg.com/favicons/favicon.ico" />@evilgeniuslab</a>
+          </li>
+          <li>
+            <a href="https://github.com/evilgeniuslabs"><img style="height: 16px;" src="https://assets-cdn.github.com/favicon.ico" /> evilgeniuslabs</a>
+          </li>
+        </ul>
+      </nav><!--/.nav-collapse -->
+    </div>
+  </header>
+
   <div class="container">
-    <h1>Fibonacci Lamp</h1>
 
     <form class="form-horizontal">
 
