--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <!-- Bootstrap theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
+  <link rel="stylesheet" href="bower_components/jquery-minicolors/jquery.minicolors.css">
+
   <!-- Custom styles -->
   <link rel="stylesheet" href="css/styles.css">
 
@@ -147,7 +149,7 @@
       <div class="form-group">
         <label for="inputColor" class="col-sm-2 control-label">Color</label>
         <div class="col-sm-6">
-          <input type="color" ng-model="color" class="form-control" id="inputColor" ng-disabled="busy || !isDeviceSelected" ng-change="onSelectedColorChange()" />
+          <input minicolors="minicolorsSettings" type="hidden" id="inputColor" class="form-control" ng-model="color" ng-disabled="busy || !isDeviceSelected" ng-change="onSelectedColorChange()" />
         </div>
       </div>
 
@@ -157,7 +159,7 @@
           <div class="input-group">
             <input ng-model="noiseSpeedX" class="form-control" id="inputNoiseSpeedX" type="number" min="0" max="255" ng-disabled="busy || disconnected" />
             <span class="input-group-btn">
-              <button class="btn" id="btnSetNoiseSpeedX" ng-click="setNoiseSpeedX()" ng-disabled="busy || isDeviceSelected">Set</button>
+              <button class="btn" id="btnSetNoiseSpeedX" ng-click="setNoiseSpeedX()" ng-disabled="busy || !isDeviceSelected">Set</button>
             </span>
           </div>
         </div>
@@ -169,7 +171,7 @@
           <div class="input-group">
             <input ng-model="noiseSpeedY" class="form-control" id="inputNoiseSpeedY" type="number" min="0" max="255" ng-disabled="busy || disconnected" />
             <span class="input-group-btn">
-              <button class="btn" id="btnSetNoiseSpeedY" ng-click="setNoiseSpeedY()" ng-disabled="busy || isDeviceSelected">Set</button>
+              <button class="btn" id="btnSetNoiseSpeedY" ng-click="setNoiseSpeedY()" ng-disabled="busy || !isDeviceSelected">Set</button>
             </span>
           </div>
         </div>
@@ -181,7 +183,7 @@
           <div class="input-group">
             <input ng-model="noiseSpeedZ" class="form-control" id="inputNoiseSpeedZ" type="number" min="0" max="255" ng-disabled="busy || disconnected" />
             <span class="input-group-btn">
-              <button class="btn" id="btnSetNoiseSpeedZ" ng-click="setNoiseSpeedZ()" ng-disabled="busy || isDeviceSelected">Set</button>
+              <button class="btn" id="btnSetNoiseSpeedZ" ng-click="setNoiseSpeedZ()" ng-disabled="busy || !isDeviceSelected">Set</button>
             </span>
           </div>
         </div>
@@ -193,7 +195,7 @@
           <div class="input-group">
             <input ng-model="noiseScale" class="form-control" id="inputNoiseScale" type="number" min="0" max="255" ng-disabled="busy || disconnected" />
             <span class="input-group-btn">
-              <button class="btn" id="btnSetNoiseScale" ng-click="setNoiseScale()" ng-disabled="busy || isDeviceSelected">Set</button>
+              <button class="btn" id="btnSetNoiseScale" ng-click="setNoiseScale()" ng-disabled="busy || !isDeviceSelected">Set</button>
             </span>
           </div>
         </div>
@@ -206,6 +208,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.6.2.js"></script>
+  <script src="bower_components/jquery-minicolors/jquery.minicolors.min.js"></script>
+  <script src="bower_components/angular-minicolors/angular-minicolors.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
